- fix alignment for allprops

--- a/ADnD_1E_Revised/1ESheet.css
+++ b/ADnD_1E_Revised/1ESheet.css
@@ -3920,6 +3920,7 @@ details[open].thac0-box {
 
 .sheet-rolltemplate-attacks .sheet-row.sheet-all-props span:has(+ span:empty),
 .sheet-rolltemplate-general .sheet-row.sheet-all-props span:has(+ span:empty) {
+  display: block;
   grid-column: 1/-1;
   margin-inline: auto;
   text-align: center;
